@@ -1,6 +1,7 @@
 Changelog:
 
 08-12-2011:
+Added createBootLogo.sh script for ease of use.
 Minor README modification.
 Added sample "C source code header" file created with gimp (boot_logo_gimp.h) and adjusted the include path.
 Renamed end_logo.h to charge_logo.h.
